<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigo_cliente"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextCodigoCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rut_cliente"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextRutCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/razon_cliente"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextRazonCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pago_cliente"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextPagoCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion_cliente"
        android:textSize="15sp" />
    
    <EditText
        android:id="@+id/editTextDireccionCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudad_cliente"
        android:textSize="15sp" />
    
    <EditText
        android:id="@+id/editTextCiudadCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    
    
    
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono_cliente"
        android:textSize="15sp" />
    
    <EditText
        android:id="@+id/editTextTelefonoCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >
    <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celular_cliente"
        android:textSize="15sp" />
    
    <EditText
        android:id="@+id/editTextCelularCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >
    <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonAgregarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_agregar_cliente"
        android:layout_gravity="center" />

</LinearLayout>
