<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AgregarPedidoActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccion_cliente"
        android:id="@+id/textViewSpinner"
        android:textSize="25sp"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_clientes" />

    <TextView
        android:id="@+id/textViewPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ingrese_pedidos"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextPedido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.26"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </EditText>

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_agregar_pedido" />
    
</LinearLayout>
